# miq_version

./: .gitignore  .travis.yml  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
miq_version/: __init__.py  constants.py
tests/: test_version.py
