[metadata]
name = miq_version
author = Peter Savage
author-email = psavage@redhat.com
summary = A class that ensures correct sorting and parsing of the ManageIQ/CFME version numbers
description-file = README.rst
license = Apache
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Utilities
keywords =
    setup
    distutils

[files]
packages =
    miq_version

[wheel]
universal=1
